# PyThermo

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: CI.yml  release.yml  test.yml
examples/: template.ipynb
sandbox/: sandbox.ipynb
src/PyThermo/: __init__.py  constants.py  crystal.py  tT_model.py  tT_path.py
src/pythermo/: __init__.py  constants.py  core_solvers.py  crystal.py  tT_model.py  tT_path.py
tests/: __init__.py  test_crystal.py  test_tT_model.py  test_tT_path.py
